--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,8 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://maven.brott.dev/' }
+
 }
 
 dependencies {
@@ -17,5 +19,11 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.3'
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.12'
+
+    implementation('org.tensorflow:tensorflow-lite:2.0.0')
+    implementation('org.tensorflow:tensorflow-lite-gpu:2.0.0')
+    implementation('org.tensorflow:tensorflow-lite-support:0.0.0-nightly') { changing = true }
 }
 
